samples/_failures_safe/1761551850_dc2f77_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7ea925d7.c: In function ‘main’:
./samples/SAFE/__tmp_7ea925d7.c:150:5: error: expected expression at end of input
  150 |     for (int i =
      |     ^~~
./samples/SAFE/__tmp_7ea925d7.c:150:5: error: expected declaration or statement at end of input
